Issue #3930: Fix fieldset labels overflowing their container.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -645,33 +645,30 @@ tr.selected td {
  *   to apply all padding to the inner .fieldset-wrapper instead.
  */
 fieldset {
-  position: relative;
   max-width: 100%;
   margin: 1em 0;
-  padding: 3em 0 0 0;
-  border-radius: 4px;
+  padding: 0;
   background-color: #fff;
-  border: 2px solid #EAEAEA;
+  border: none;
   min-width: 0;
 }
 fieldset .fieldset-legend {
-  position: absolute;
-  left: 0; /* LTR */
-  top: 0;
   width: 100%;
-  margin-top: .25em;
   padding-left: 1em; /* LTR */
   text-transform: uppercase;
   box-sizing: border-box;
+  border-radius: 4px;
+  border: 2px solid #EAEAEA;
+  background-color: #fff;
 }
 [dir="rtl"] fieldset .fieldset-legend {
-  right: 0;
   padding-right: 1em;
   padding-left: 0;
 }
 legend {
   font-size: 120%;
   font-weight: normal;
+  width: 100%;
 }
 .fieldset-description {
   margin-bottom: 1em;
@@ -685,21 +682,22 @@ fieldset fieldset fieldset {
 /**
  * Collapsible Fieldsets
  */
-.js fieldset.collapsible {
-  position: relative;
-}
 fieldset .fieldset-wrapper {
-  padding: 0 13px 13px 15px; /* LTR */
+  padding: 15px 13px 13px 15px; /* LTR */
+  border-radius: 4px;
+  border: 2px solid #EAEAEA;
+  border-top: none;
+  margin-top: -2px;
 }
 [dir="rtl"] fieldset .fieldset-wrapper {
-  padding: 0 15px 13px 13px;
+  padding: 15px 15px 13px 13px;
 }
 .js fieldset.collapsible .fieldset-title {
   position: relative;
   z-index: 1;
   display: block;
   width: 94%; /* IE8 fallback */
-  width: calc(100% - 4em);
+  width: calc(100% - 2em);
   padding: .3em .3em .3em 1.8em;
   margin: 0 -.5em;
   border-radius: 4px;
@@ -746,7 +744,7 @@ fieldset .fieldset-wrapper {
 }
 /* Collapsed state styles */
 .js fieldset.collapsed {
-  padding: 1.6em 0;
+  padding: 0;
 }
 .js fieldset.collapsed .fieldset-legend a:before {
   left: .8em;
